--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 
 {
-  "name": "proxy-ui",
+  "name": "uv-backend",
   "version": "1.0.0",
-  "private": true,
+  "main": "index.js",
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@titaniumnetwork-dev/ultraviolet": "^1.0.0",
+    "@tomphttp/bare-server-node": "^1.0.0",
+    "express": "^4.18.2"
   },
   "scripts": {
-    "start": "vite",
-    "build": "vite build",
-    "dev": "vite"
+    "start": "node index.js"
   }
 }
